--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Google Glass</title>
-    <link rel="stylesheet" type="text/css" href="_css/estilo.css">
+    <link rel="stylesheet" type="text/css" href="css/estilo.css">
 
 </head>
-<script language="javascript" src="_javascript/funcoes.js"></script>
+<script language="javascript" src="javascript/funcoes.js"></script>
 <body>
 <!--section, aside, footer-->
 <div id="interface">
@@ -16,17 +16,17 @@
         <h2>A revolução do Google está chegando</h2>
     </hgroup>
 
-    <img id="icone" src="_imagens/glass-oculos-preto-peq.png" alt="oclinhos">
+    <img id="icone" src="imagens/glass-oculos-preto-peq.png" alt="oclinhos">
  
 <div id="coisinho">
     <nav id="menu">
         <h1>Menu Principal</h1>
         <ul type="square" start="1">
-            <li onmouseover="mudaFoto('_imagens/home.png')" onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')"><a href="index.html">Home</a></li>
-            <li onmouseover="mudaFoto('_imagens/especificacoes.png')" onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')"><a href="specs.html">Especificações</a></li>
-            <li onmouseover="mudaFoto('_imagens/fotos.png')" onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')"><a href="fotos.html">Fotos</a></li>
-            <li onmouseover="mudaFoto('_imagens/multimidia.png')" onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')"><a href="multimidia.html">Multimídia</a></li>
-            <li onmouseover="mudaFoto('_imagens/contato.png')" onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')"><a href="fale-conosco.html">Fale conosco</a></li>
+            <li onmouseover="mudaFoto('imagens/home.png')" onmouseout="mudaFoto('imagens/glass-oculos-preto-peq.png')"><a href="index.html">Home</a></li>
+            <li onmouseover="mudaFoto('imagens/especificacoes.png')" onmouseout="mudaFoto('imagens/glass-oculos-preto-peq.png')"><a href="specs.html">Especificações</a></li>
+            <li onmouseover="mudaFoto('imagens/fotos.png')" onmouseout="mudaFoto('imagens/glass-oculos-preto-peq.png')"><a href="fotos.html">Fotos</a></li>
+            <li onmouseover="mudaFoto('imagens/multimidia.png')" onmouseout="mudaFoto('imagens/glass-oculos-preto-peq.png')"><a href="multimidia.html">Multimídia</a></li>
+            <li onmouseover="mudaFoto('imagens/contato.png')" onmouseout="mudaFoto('imagens/glass-oculos-preto-peq.png')"><a href="fale-conosco.html">Fale conosco</a></li>
         </ul>
     </nav>
 </div>
@@ -52,7 +52,7 @@
 <p>O <del>Google Glass</del> é um acessório em forma de óculos que possibilita a interação dos usuários com diversos conteúdos em realidade aumentada. Também chamado de <a href="http://www.facebook.com" target="_blank">Project Glass</a>, o eletrônico é capaz de tirar fotos a partir de comandos de voz, enviar mensagens instantâneas e realizar vídeo&shy;con&shy;ferên&shy;cias. Seu lançamento está previsto para 2014, e seu preço deve ser de US$ 1,5 mil. Atualmente o <em>Google Glass</em> encontra-se em fase de testes e já possui um vídeo totalmente gravado com o dispositivo. Além disso, a companhia de buscas registrou novas patentes anti-furto e de desbloqueio de tela para o acessório.</p>
 
 <figure class="foto-legenda">
-    <img src="_imagens/glass-quadro-homem-mulher.jpg" alt="homi e cuié">
+    <img src="imagens/glass-quadro-homem-mulher.jpg" alt="homi e cuié">
     <figcaption>
         <h3>Google Glasses</h3>
         <p>O futuro está lá onde não se pode ver.</p>
@@ -99,8 +99,8 @@
 <p>O vídeo de divulgação do Google mostra que você pode se transformar em uma espécie de “super-&shy;humano”, já que o aparelho pode indicar a quantos metros você está de seu destino, se o metrô está aberto ou fechado, mostrar o clima, agenda e até mesmo permitir que você marque encontros apenas com comandos de voz.</p>
 
 <div id="video-abertura">
-    <video id="video-abertura" controls="controls" poster="_imagens/video-mini01.jpg">
-        <source src="_media/one-day.mp4" type="video/mp4">
+    <video id="video-abertura" controls="controls" poster="imagens/video-mini01.jpg">
+        <source src="media/one-day.mp4" type="video/mp4">
         Desculpe, não foi possível carregar o vídeo
     </video>
 </article>
@@ -111,8 +111,8 @@
 <h2>Vídeo mais recente</h2>
 
 <div id="video-recente">
-    <video id="video-recente" controls="controls" poster="_imagens/video-mini02.jpg">
-        <source src="_media/how-it-feels.mp4" type="video/mp4">
+    <video id="video-recente" controls="controls" poster="imagens/video-mini02.jpg">
+        <source src="media/how-it-feels.mp4" type="video/mp4">
         Desculpe, não foi possível carregar o vídeo
     </video>
 <br>
