--- a/specs.html
+++ b/specs.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Google Glass</title>
-    <link rel="stylesheet" type="text/css" href="_css/estilo.css">
-    <link rel="stylesheet" type="text/css" href="_css/specs.css">
+    <link rel="stylesheet" type="text/css" href="css/estilo.css">
+    <link rel="stylesheet" type="text/css" href="css/specs.css">
     <style>
         p {
             margin-left: 100px;
@@ -15,7 +15,7 @@
         }
     </style>
 </head>
-<script language="javascript" src="_javascript/funcoes.js"></script>
+<script language="javascript" src="javascript/funcoes.js"></script>
 <body>
 <!--section, aside, footer-->
 <div id="interface">
@@ -25,16 +25,16 @@
         <h2>A revolução do Google está chegando</h2>
     </hgroup>
 
-    <img id="icone" src="_imagens/especificacoes.png" alt="oclinhos">
+    <img id="icone" src="imagens/especificacoes.png" alt="oclinhos">
  
 <nav id="menu">
     <h1>Menu Principal</h1>
     <ul type="square" start="1">
-        <li onmouseover="mudaFoto('_imagens/home.png')" onmouseout="mudaFoto('_imagens/especificacoes.png')"><a href="index.html">Home</a></li>
-        <li onmouseover="mudaFoto('_imagens/especificacoes.png')" onmouseout="mudaFoto('_imagens/especificacoes.png')"><a href="specs.html">Especificações</a></li>
-        <li onmouseover="mudaFoto('_imagens/fotos.png')" onmouseout="mudaFoto('_imagens/especificacoes.png')"><a href="fotos.html">Fotos</a></li>
-        <li onmouseover="mudaFoto('_imagens/multimidia.png')" onmouseout="mudaFoto('_imagens/especificacoes.png')"><a href="multimidia.html">Multimídia</a></li>
-        <li onmouseover="mudaFoto('_imagens/contato.png')" onmouseout="mudaFoto('_imagens/especificacoes.png')"><a href="fale-conosco.html">Fale conosco</a></li>
+        <li onmouseover="mudaFoto('imagens/home.png')" onmouseout="mudaFoto('imagens/especificacoes.png')"><a href="index.html">Home</a></li>
+        <li onmouseover="mudaFoto('imagens/especificacoes.png')" onmouseout="mudaFoto('imagens/especificacoes.png')"><a href="specs.html">Especificações</a></li>
+        <li onmouseover="mudaFoto('imagens/fotos.png')" onmouseout="mudaFoto('imagens/especificacoes.png')"><a href="fotos.html">Fotos</a></li>
+        <li onmouseover="mudaFoto('imagens/multimidia.png')" onmouseout="mudaFoto('imagens/especificacoes.png')"><a href="multimidia.html">Multimídia</a></li>
+        <li onmouseover="mudaFoto('imagens/contato.png')" onmouseout="mudaFoto('imagens/especificacoes.png')"><a href="fale-conosco.html">Fale conosco</a></li>
     </ul>
 </nav>
 </header>
@@ -53,7 +53,7 @@
         <p>Clique em qualquer área destacada da imagem para ter mais informações sobre os recursos do Google Glass. Qualquer ponto vermelho vai te levar a um lugar cheio de novas informações.</p>
 
         <section id="conteudo">
-            <img src="_imagens/glass-esquema-marcado.jpg" usemap="#meumapa">
+            <img src="imagens/glass-esquema-marcado.jpg" usemap="#meumapa">
             <!--shape=rectangle, circle, poly-->
             <map name="meumapa">
                 <area shape="rect" coords="184,208,268,258" href="google-glass.html#tela" target="janela">
