--- a/fale-conosco.html
+++ b/fale-conosco.html
@@ -61,8 +61,8 @@
                 <p><label for="cData">Data de Nascimento: </label><input type="date" name="tData" id="cData"></p>
             </fieldset>
             <fieldset id="endereco"><legend>Endereço do Usuário</legend>
-                <p><label for="cLugar">Logradouro </label><input type="text" name="tLugar" id="cLugar" size="20" placeholder="Rua, Av, Trav...">
-                <label for="cNumero">Número </label><input type="number" name="tNumero" id="cNumero" size="10" min="0"></p>
+                <p><label for="cLugar">Logradouro: </label><input type="text" name="tLugar" id="cLugar" size="20" placeholder="Rua, Av, Trav...">
+                <label for="cNumero">Número: </label><input type="number" name="tNumero" id="cNumero" size="10" min="0"></p>
                 <p><label for="cEstado">Estado: </label>
                 <select name="tEstado" id="cEstado">
                     <optgroup label="Norte">
