--- a/fotos.html
+++ b/fotos.html
@@ -1,69 +1,75 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Google Glass</title>
-    <link rel="stylesheet" type="text/css" href="css/estilo.css">
-    <link rel="stylesheet" type="text/css" href="css/fotos.css">
+    <link rel="stylesheet" type="text/css" href="./css/estilo.css">
+    <link rel="stylesheet" type="text/css" href="./css/fotos.css">
 
 </head>
-<script language="javascript" src="javascript/funcoes.js"></script>
+<script language="javascript" src="./javascript/funcoes.js"></script>
+
 <body>
-<!--section, aside, footer-->
-<div id="interface">
+    <!--section, aside, footer-->
     <header id="cabecalho">
-    <hgroup>
-        <h1>Google Glass</h1>
-        <h2>A revolução do Google está chegando</h2>
-    </hgroup>
+        <hgroup>
+            <h1>Google Glass</h1>
+            <h2>A revolução do Google está chegando</h2>
+        </hgroup>
 
-    <img id="icone" src="imagens/fotos.png" alt="oclinhos">
- 
-<nav id="menu">
-    <h1>Menu Principal</h1>
-    <ul type="square" start="1">
-        <li onmouseover="mudaFoto('imagens/home.png')" onmouseout="mudaFoto('imagens/fotos.png')"><a href="index.html">Home</a></li>
-        <li onmouseover="mudaFoto('imagens/especificacoes.png')" onmouseout="mudaFoto('imagens/fotos.png')"><a href="specs.html">Especificações</a></li>
-        <li onmouseover="mudaFoto('imagens/fotos.png')" onmouseout="mudaFoto('imagens/fotos.png')"><a href="fotos.html">Fotos</a></li>
-        <li onmouseover="mudaFoto('imagens/multimidia.png')" onmouseout="mudaFoto('imagens/fotos.png')"><a href="multimidia.html">Multimídia</a></li>
-        <li onmouseover="mudaFoto('imagens/contato.png')" onmouseout="mudaFoto('imagens/fotos.png')"><a href="fale-conosco.html">Fale conosco</a></li>
-    </ul>
-</nav>
-</header>
+        <img src="./imagens/glass-logo-peq.jpg" alt="Google Glass logo">
 
-<section id="corpo-full">
-    <article id="principal">
-        <header id="artigo">
-            <hgroup>
-                <h3>Glass > Fotos</h3>
-                <h1>Galeria de Imagens do Google Glass</h1>
-                <h2>por Caicosa</h2>
-                <h3 class="dir">Atualizado em 23/Março/2021</h3>
-            </hgroup>
-        </header>
-  
+        <nav id="menu">
+            <h1>Menu Principal</h1>
+            <ul type="square" start="1">
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./specs.html">Especificações</a></li>
+                <li><a href="./fotos.html">Fotos</a></li>
+                <li><a href="./fale-conosco.html">Fale conosco</a></li>
+            </ul>
+        </nav>
+        
+    </header>
 
-    <p>Veja na nossa galeria de fotos imagens que mostram algumas das principais características do Google Glass, como recursos e propriedades que estão impressionando o mundo inteiro. Basta passar o mouse sobre uma das fotos para ver uma versão ampliada e com uma breve descrição.</p>
-
-    <ul id="albumFotos">
-        <li id="foto01"><span>Agenda e lembretes</span></li>
-        <li id="foto02"><span>Sergey Brin usando o Glass</span></li>
-        <li id="foto03"><span>Leve e compacto</span></li>
-        <li id="foto04"><span>Sensação de uma tela de 50"</span></li>
-        <li id="foto05"><span>Vários tipos de lente</span></li>
-        <li id="foto06"><span>Informações importantes</span></li>
-    </ul>
-
-    </article>
-</section>
+    <section id="corpo-full">
+        <article id="principal">
+            <header id="artigo">
+                <hgroup>
+                    <h3>Glass > Fotos</h3>
+                    <h1>Galeria de Imagens do Google Glass</h1>
+                    <h2>por Caicosa</h2>
+                    <h3 class="dir">Atualizado em 23/Março/2021</h3>
+                </hgroup>
+            </header>
 
 
-<footer id="rodape">
-    <p>Copyright &copy; 2021 - by Caicosa BR<br>
-    <a href="https://www.youtube.com/watch?v=_FX6rml2Yjs&ab_channel=MrBeast" target="_blank">Facebook</a> | 
-    <a href="https://www.youtube.com/watch?v=BXLVYzqlj2E&ab_channel=Kwebbelkop" target="_blank">Twitter</a><p>
+            <p>Veja na nossa galeria de fotos imagens que mostram algumas das principais características do Google
+                Glass, como recursos e propriedades que estão impressionando o mundo inteiro. Basta passar o mouse
+                sobre uma das fotos para ver uma versão ampliada e com uma breve descrição.</p>
+
+            <ul id="albumFotos">
+                <li id="foto01"><span>Agenda e lembretes</span></li>
+                <li id="foto02"><span>Sergey Brin usando o Glass</span></li>
+                <li id="foto03"><span>Leve e compacto</span></li>
+                <li id="foto04"><span>Sensação de uma tela de 50"</span></li>
+                <li id="foto05"><span>Vários tipos de lente</span></li>
+                <li id="foto06"><span>Informações importantes</span></li>
+            </ul>
+
+        </article>
+    </section>
+
+
+    <footer id="rodape">
+        <p>Copyright &copy; 2021 - by Caicosa BR<br>
+            <a href="https://www.youtube.com/watch?v=_FX6rml2Yjs&ab_channel=MrBeast" target="_blank">Facebook</a> |
+            <a href="https://www.youtube.com/watch?v=BXLVYzqlj2E&ab_channel=Kwebbelkop" target="_blank">Twitter</a>
+        <p>
     </footer>
-    
-    </div>
-    </body>
-    </html>
+
+</body>
+
+</html>
