--- a/multimidia.html
+++ b/multimidia.html
@@ -1,63 +1,67 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Google Glass</title>
     <link rel="stylesheet" type="text/css" href="css/estilo.css">
     <link rel="stylesheet" type="text/css" href="css/media.css">
 </head>
 <script language="javascript" src="javascript/funcoes.js"></script>
+
 <body>
-<!--section, aside, footer-->
-<div id="interface">
+    <!--section, aside, footer-->
     <header id="cabecalho">
-    <hgroup>
-        <h1>Google Glass</h1>
-        <h2>A revolução do Google está chegando</h2>
-    </hgroup>
+        <hgroup>
+            <h1>Google Glass</h1>
+            <h2>A revolução do Google está chegando</h2>
+        </hgroup>
 
-    <img id="icone" src="imagens/multimidia.png" alt="oclinhos">
- 
-<nav id="menu">
-    <h1>Menu Principal</h1>
-    <ul type="square" start="1">
-        <li onmouseover="mudaFoto('imagens/home.png')" onmouseout="mudaFoto('imagens/multimidia.png')"><a href="index.html">Home</a></li>
-        <li onmouseover="mudaFoto('imagens/especificacoes.png')" onmouseout="mudaFoto('imagens/multimidia.png')"><a href="specs.html">Especificações</a></li>
-        <li onmouseover="mudaFoto('imagens/fotos.png')" onmouseout="mudaFoto('imagens/multimidia.png')"><a href="fotos.html">Fotos</a></li>
-        <li onmouseover="mudaFoto('imagens/multimidia.png')" onmouseout="mudaFoto('imagens/multimidia.png')"><a href="multimidia.html">Multimídia</a></li>
-        <li onmouseover="mudaFoto('imagens/contato.png')" onmouseout="mudaFoto('imagens/multimidia.png')"><a href="fale-conosco.html">Fale conosco</a></li>
-    </ul>
-</nav>
-</header>
-<section id="corpo-full">
-    <article id="principal">
-        <header id="artigo">
-            <hgroup>
-                <h3>Glass > Multimídia</h3>
-                <h1>Sons e Vídeos</h1>
-                <h2>por Caicosa</h2>
-                <h3 class="dir">Atualizado em 23/Março/2021</h3>
-            </hgroup>
-        </header>
-        <div id="tv-radio">
-            <audio id="musica" controls="controls">
-                <source src="media/2009-lovers-carvings-bibio.mp3" type="audio/mpeg">
-                Desculpe, mas não foi possível carregar o áudio
-            </audio>
-            <video id="filme" controls="controls" poster="imagens/video-mini03.jpg">
-                <source src="media/getting-started.mp4" type="video/mp4">
-                Desculpe, mas não foi possível carregar o áudio
-            </video>
-        </div>
-        <!--<iframe width="560" height="315" src="https://www.youtube.com/embed/F1NwXNXsXXw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
-    </article>
-</section>
+        <img src="imagens/glass-logo-peq.jpg" alt="Google Glass logo">
 
-<footer id="rodape">
-    <p>Copyright &copy; 2021 - by Caicosa BR<br>
-    <a href="https://www.youtube.com/watch?v=_FX6rml2Yjs&ab_channel=MrBeast" target="_blank">Facebook</a> | 
-    <a href="https://www.youtube.com/watch?v=BXLVYzqlj2E&ab_channel=Kwebbelkop" target="_blank">Twitter</a><p>
+        <nav id="menu">
+            <h1>Menu Principal</h1>
+            <ul type="square" start="1">
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./specs.html">Especificações</a></li>
+                <li><a href="./fotos.html">Fotos</a></li>
+                <li><a href="./fale-conosco.html">Fale conosco</a></li>
+            </ul>
+        </nav>
+        
+    </header>
+    <section id="corpo-full">
+        <article id="principal">
+            <header id="artigo">
+                <hgroup>
+                    <h3>Glass > Multimídia</h3>
+                    <h1>Sons e Vídeos</h1>
+                    <h2>por Caicosa</h2>
+                    <h3 class="dir">Atualizado em 23/Março/2021</h3>
+                </hgroup>
+            </header>
+            <div id="tv-radio">
+                <audio id="musica" controls="controls">
+                    <source src="media/2009-lovers-carvings-bibio.mp3" type="audio/mpeg">
+                    Desculpe, mas não foi possível carregar o áudio
+                </audio>
+                <video id="filme" controls="controls" poster="imagens/video-mini03.jpg">
+                    <source src="media/getting-started.mp4" type="video/mp4">
+                    Desculpe, mas não foi possível carregar o áudio
+                </video>
+            </div>
+            <!--<iframe width="560" height="315" src="https://www.youtube.com/embed/F1NwXNXsXXw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
+        </article>
+    </section>
+
+    <footer id="rodape">
+        <p>Copyright &copy; 2021 - by Caicosa BR<br>
+            <a href="https://www.youtube.com/watch?v=_FX6rml2Yjs&ab_channel=MrBeast" target="_blank">Facebook</a> |
+            <a href="https://www.youtube.com/watch?v=BXLVYzqlj2E&ab_channel=Kwebbelkop" target="_blank">Twitter</a>
+        <p>
     </footer>
-</div>
 </body>
+
 </html>
